apps/prod/public/tproxy/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: tproxy
  labels:
    app.kubernetes.io/name: tproxy
    app.kubernetes.io/component: app
  annotations:
    secret.reloader.stakater.com/reload: "app"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tproxy
      app.kubernetes.io/component: app
  template:
    metadata:
      name: tproxy
      labels:
        app.kubernetes.io/name: tproxy
        app.kubernetes.io/component: app
    spec:
      volumes:
        - name: runtime
          emptyDir:
            medium: Memory
            sizeLimit: 4Mi
        - name: app
          secret:
            secretName: app
      containers:
        - name: tproxy
          image: ghcr.io/telemt/telemt:3.5.13
          workingDir: /run/telemt
          args:
            - /etc/telemt/config.toml
          volumeMounts:
            - name: runtime
              mountPath: /run/telemt
            - name: app
              mountPath: "/etc/telemt/config.toml"
              subPath: config.toml
              readOnly: true

          startupProbe:
            httpGet:
              path: /v1/health
              port: 9091
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
            
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 9091
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 9091
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
