apps/prod/public/tproxy/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: tproxy
  labels:
    app.kubernetes.io/name: tproxy
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: tproxy
    app.kubernetes.io/component: app
  ports:
    - name: app-1
      port: 7770
    - name: app-2
      port: 7771
  type: ClusterIP
