apps/prod/public/tproxy/ingress-app.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-proxy
  namespace: tproxy
spec:
  tls:
    passthrough: true
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`repository.su`)
      services:
        - name: app
          port: 7770

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-plain
  namespace: tproxy
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cache.hyvel.eu`)
      middlewares:
        - name: traefik-https-redirect
          namespace: traefik
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  namespace: tproxy
spec:
  tls:
    secretName: wildcard-hyvel-certificate-secret
    domains:
      - main: cache.hyvel.eu
  entryPoints:
    - websecure
  routes:
    - match: Host(`cache.hyvel.eu`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - kind: Service
          name: app
          port: 7771
