apps/prod/public/tproxy/route-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: app
  namespace: tproxy
spec:
  parentRefs:
    - name: main-gw
      namespace: kgateway
      sectionName: tls
  hostnames:
    - "www.klick.ee"
  rules:
    - backendRefs:
      - name: app
        port: 7770
